--- a/build.gradle
+++ b/build.gradle
@@ -19,18 +19,22 @@ ext {
     set('springCloudVersion', "Hoxton.RELEASE")
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencies {
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     implementation 'org.springframework.cloud:spring-cloud-config-server'
     implementation('org.springframework.boot:spring-boot-starter-web')
     compile "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-}
-
-test {
-    useJUnitPlatform()
+    testImplementation 'org.mockito:mockito-inline:3.7.7'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
+    testCompile 'org.mockito:mockito-junit-jupiter:3.7.7'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.3'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.3'
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
 dependencyManagement {
